<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/flagIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_flag_service_not_working"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/regionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/region_is_not_supported_text"
        android:textColor="@color/text_color"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flagIcon" />

    <TextView
        android:id="@+id/myTaxiMessage"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/my_taxi_message"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regionText" />

    <Button
        android:id="@+id/pickUpBtn"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/pick_up_btn_bg"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/enter_your_pickup_location"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myTaxiMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>