<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="24dp"
    android:layout_marginTop="25dp"
    android:layout_marginRight="24dp"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/point_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_point_start"
        app:layout_constraintBottom_toTopOf="@id/dashed_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dashed_line"
        android:layout_width="20dp"
        android:layout_height="23dp"
        android:background="@drawable/dashed_line"
        android:scaleY="2"
        app:layout_constraintLeft_toLeftOf="@id/point_start"
        app:layout_constraintRight_toRightOf="@id/point_start"
        app:layout_constraintTop_toBottomOf="@id/point_start" />

    <ImageView
        android:id="@+id/point_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_point_end"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dashed_line" />

    <TextView
        android:id="@+id/start_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_vertical"
        android:text="@string/start_address_text"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/point_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/end_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_vertical"
        android:text="@string/end_address_text"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/point_end"
        app:layout_constraintTop_toTopOf="@id/point_end" />

    <ImageView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@id/date"
        app:layout_constraintLeft_toLeftOf="@id/point_end"
        app:layout_constraintRight_toRightOf="@id/point_end"
        app:layout_constraintTop_toTopOf="@id/date" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_vertical"
        android:text="@string/date_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/calendar"
        app:layout_constraintTop_toBottomOf="@id/point_end" />

    <TextView
        android:id="@+id/payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/payment_text"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/date" />


    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/list_item_bottom_line"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
